# snort3-dns-firewall

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  configure_cmake.sh  install.sh  loc.sh
cmake/: RequireLibrary.cmake  create_options.cmake
etc/: CMakeLists.txt
etc/snort/dns-firewall/: basic.dfw3model  basic.snort3model  blacklist.snort3model  config.yaml  test.config.yaml  whitelist.snort3model
plugin/: .clang-format  .gitignore  Makefile  gini.cc  markov.cc
src/: .gitignore  CMakeLists.txt  gini.cc  hmm.cc  markov.cc
src/plugin/: CMakeLists.txt  config.cc  config.h  dns-codec.cc  dns-firewall.cc  dns-template.cc  module.cc  module.h  option.cc  option.h  plugin.cc
src/scientific/ml/: serializable_mat.h  smart_hmm.h
src/snort/dns_firewall/: classification.cc  classification.h  config.cc  config.h  distribution_scale.cc  distribution_scale.h  dns_classifier.cc  dns_classifier.h  dns_codec.cc  dns_codec.h  dns_packet.cc  dns_packet.h  ips_option.cc  ips_option.h  model.cc  model.h  module.cc  module.h  plugin.cc
src/snort/dns_firewall/entropy/: dns_classifier.cc  dns_classifier.h
src/snort/dns_firewall/hmm/: dns_classifier.cc  dns_classifier.h
src/snort/dns_firewall/test/: main.cc
src/snort/dns_firewall/timeframe/: dns_classifier.cc  dns_classifier.h
src/snort/dns_firewall/trainer/: config.cc  config.h  getopt_parser.cc  getopt_parser.h  main.cc  model.h
src/snort/dns_firewall/trainer/entropy/: line_processor.cc  line_processor.h
src/snort/dns_firewall/trainer/hmm/: line_processor.cc  line_processor.h
src/std/: max_size_queue.h
src/trainer/: CMakeLists.txt  gini.cc  markov.cc
